welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:1: error: not found: value temp1
def nearHundred(n:Int): Boolean = {temp1=Math.abs(100-n)<10
                                   ^nearHundred:2: error: not found: value temp2
                                   temp2=Math.abs(200-n)<10
                                   ^nearHundred:3: error: not found: value temp1
  if (temp1||temp2) return true 
      ^nearHundred:3: error: not found: value temp2
  if (temp1||temp2) return true 
             ^